[package]
name = "multi-spinner"
version = "0.1.0"
edition = "2021"
authors = ["Robin <robin.tordly@gmail.com"]

[dependencies]
anyhow = "1.0.79"
crossterm = "0.27.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"
